--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "16.1.6",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
